--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       width="100%"
       height="100%"
       style="border:none;"
-      src="https://www.figma.com/embed?embed_host=share&url=YOUR_FIGMA_URL"
+      src="https://www.figma.com/proto/frzQLbcovCOayEnd5JZJJN/Untitled?node-id=2-2&p=f&t=3zmooEyuoZw8ZUVw-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
       allowfullscreen
     ></iframe>
   </body>
