--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <title>My Figma Design</title>
   </head>
   <body style="margin:0">
-    <iframe
-      width="100%"
-      height="100%"
-      style="border:none;"
-      src="https://www.figma.com/proto/frzQLbcovCOayEnd5JZJJN/Untitled?node-id=2-2&p=f&t=3zmooEyuoZw8ZUVw-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
-      allowfullscreen
-    ></iframe>
+    <a href="https://www.figma.com/proto/frzQLbcovCOayEnd5JZJJN/Untitled?node-id=2-2&p=f&t=3zmooEyuoZw8ZUVw-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">
+  View Design in Figma
+</a>
+
   </body>
 </html>
