--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
   <head>
     <title>My Figma Design</title>
   </head>
-  <body style="margin:0">
-    <a href="https://www.figma.com/proto/frzQLbcovCOayEnd5JZJJN/Untitled?node-id=2-2&p=f&t=3zmooEyuoZw8ZUVw-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">
-  View Design in Figma
-</a>
+  <body style="margin:0;text-align:center;font-family:sans-serif">
+
+    <h1>Figma Prototype Preview</h1>
+
+    <img src="figma-preview.png" alt="Design preview" style="width:100%;max-width:800px;margin-bottom:20px;">
+
+    <a 
+      href="https://www.figma.com/proto/frzQLbcovCOayEnd5JZJJN/Untitled?node-id=2-2&p=f&t=3zmooEyuoZw8ZUVw-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" 
+      target="_blank"
+      style="display:inline-block;padding:12px 20px;background-color:#0acf83;color:white;text-decoration:none;border-radius:6px;"
+    >
+      View Design in Figma
+    </a>
 
   </body>
 </html>
